crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_integer_literal.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { 42; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    Literal(
                        42,
                    ),
                ),
            ],
        },
    ),
]
