crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_multiplication_precedence.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { a + b * c; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                    right: Spanned(
                                        BinaryOp {
                                            op: Mul,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "b",
                                                        18..19,
                                                    ),
                                                ),
                                                18..19,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "c",
                                                        22..23,
                                                    ),
                                                ),
                                                22..23,
                                            ),
                                        },
                                        18..19,
                                    ),
                                },
                                14..15,
                            ),
                        ),
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
