crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_nested_index.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { matrix[i][j]; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        IndexAccess {
                                            array: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "matrix",
                                                        14..20,
                                                    ),
                                                ),
                                                14..20,
                                            ),
                                            index: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "i",
                                                        21..22,
                                                    ),
                                                ),
                                                21..22,
                                            ),
                                        },
                                        14..20,
                                    ),
                                    index: Spanned(
                                        Identifier(
                                            Spanned(
                                                "j",
                                                24..25,
                                            ),
                                        ),
                                        24..25,
                                    ),
                                },
                                14..20,
                            ),
                        ),
                        14..27,
                    ),
                ],
            },
            0..29,
        ),
    ),
]
