crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_nested_member.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { obj.inner.field; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    MemberAccess {
                        object: MemberAccess {
                            object: Identifier(
                                "obj",
                            ),
                            field: "inner",
                        },
                        field: "field",
                    },
                ),
            ],
        },
    ),
]
