crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_parenthesized_expr.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { (a + b); }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                15..16,
                                            ),
                                        ),
                                        15..16,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "b",
                                                19..20,
                                            ),
                                        ),
                                        19..20,
                                    ),
                                },
                                14..21,
                            ),
                        ),
                        14..22,
                    ),
                ],
            },
            0..24,
        ),
    ),
]
