crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_simple_call.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { foo(); }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    FunctionCall {
                        callee: Identifier(
                            "foo",
                        ),
                        args: [],
                    },
                ),
            ],
        },
    ),
]
