crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_simple_identifier.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { my_var; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Identifier(
                                    Spanned(
                                        "my_var",
                                        14..20,
                                    ),
                                ),
                                14..20,
                            ),
                        ),
                        14..21,
                    ),
                ],
            },
            0..23,
        ),
    ),
]
