crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_simple_member.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { obj.field; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        Identifier(
                                            Spanned(
                                                "obj",
                                                14..17,
                                            ),
                                        ),
                                        14..17,
                                    ),
                                    field: Spanned(
                                        "field",
                                        18..23,
                                    ),
                                },
                                14..23,
                            ),
                        ),
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
