crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__expression_simple_struct.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { Point { x: 1, y: 2 }; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Expression(
                    StructLiteral {
                        name: "Point",
                        fields: [
                            (
                                "x",
                                Literal(
                                    1,
                                ),
                            ),
                            (
                                "y",
                                Literal(
                                    2,
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
]
